# microct-analysis

./: .gitignore  CHANGELOG.md  README.md  mars.toml  pyproject.toml
agents/: microct-analyst.md  microct-cleanup.md  microct-landmarker.md  microct-measurer.md  microct-segmenter.md  microct-workflow-creator.md
bootstrap/: setup.md
design-refs/collapsed-skills/: landmark-picking-content.md  notebook-cleanup-content.md  roi-measurement-content.md
exp_out/biology-15-00262-s001/: Supplemental Table S1, uCT reported 00Results.xlsx  Supplemental Table S2, tibia rotation correction.xlsx  Supplemental Table S3, Mint OA 6-7-8 uCT combined 1-6-26.xlsx
skills/landmark-picking/: SKILL.md
skills/mct-visual-review/: SKILL.md
skills/notebook-cleanup/: SKILL.md
skills/roi-measurement/: SKILL.md
skills/segmentation-review/: SKILL.md
src/microct_analysis/: __init__.py
src/microct_analysis/domain/: __init__.py  artifact_contracts.py  confidence.py  review_events.py  seed_curation.py
src/microct_analysis/measurements/: __init__.py  geometry.py  models.py  reporting.py  trabecular.py  volumes.py  workflow_binding.py
src/microct_analysis/notebook_tasks/: __init__.py  cleanup.py
src/microct_analysis/processing/: __init__.py  calibration.py  dicom.py  io.py  morphology.py  orientation.py  preprocess.py  resample.py  sanity.py  segmentation.py  surface.py  threshold.py  (+1 more)
tests/: conftest.py  test_dependency_boundaries.py  test_e2e_pipeline.py
tests/domain/: test_artifact_contracts.py  test_confidence.py  test_review_events.py  test_seed_curation.py
tests/measurements/: test_geometry.py  test_oa6_acceptance.py  test_reporting.py  test_trabecular.py  test_volumes.py  test_workflow_binding.py
tests/notebook_tasks/: test_cleanup.py  test_cleanup_derive.py
tests/processing/: test_calibration.py  test_dicom.py  test_io.py  test_morphology.py  test_orientation.py  test_preprocess.py  test_resample.py  test_sanity.py  test_segmentation.py  test_surface.py  test_threshold.py  test_types.py
tests/stages/: test_landmarks.py  test_roi.py  test_segmentation.py
tests/workflows/: test_explain.py  test_feedback.py  test_loading.py  test_override_history.py  test_review.py  test_tang_fixture.py
(+14 files in other folders)
