[project]
name = "microct-analysis"
version = "0.1.0"
description = "Domain helpers for micro-CT analysis workflows"
requires-python = ">=3.11"
dependencies = [
    "jupyter-workbench",
    "mouse-ct",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microct_analysis"]

[tool.ruff]
line-length = 120

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
