[project]
name = "microct-analysis"
version = "0.1.0"
description = "Domain helpers for micro-CT analysis workflows"
requires-python = ">=3.11"
dependencies = [
    "jupyter-workbench",
    "nibabel>=5.0",
    "pydicom>=2.4",
    "scikit-image>=0.22",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microct_analysis"]

[tool.uv.sources]
jupyter-workbench = { path = "../jupyter-workbench", editable = true }

[tool.ruff]
line-length = 120

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "python-docx>=1.2.0",
]
